Fixing button spacing/width

--- a/coastal-hazards-portal/src/main/webapp/css/front/slider-items.css
+++ b/coastal-hazards-portal/src/main/webapp/css/front/slider-items.css
@@ -52,6 +52,7 @@
 
 .application-card-add-bucket-btn {
 	font-size: 18px !important;
+	width: 7.9em
 }
 
 .application-card-more-info-btn img, 
